fix previous commit so h2 is visible on expanded

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -10,6 +10,9 @@
 .navbar-logos{
     height: 100%;
 }
+#draft-text {
+    color: #333333;
+}
 .nav-stack{
     margin-top: 1%;
     float: right;
